--- a/Foodfy/src/app/views/users/about.njk
+++ b/Foodfy/src/app/views/users/about.njk
@@ -1,5 +1,9 @@
 {% extends "layout.njk" %}
 
+{% block search %}
+
+{% endblock search %}
+
 {% block head %}
     <title>Sobre - Foodfy</title>
 {% endblock %}
