--- a/Foodfy/src/app/views/admin/recipes/loadRecipes.njk
+++ b/Foodfy/src/app/views/admin/recipes/loadRecipes.njk
@@ -1,9 +1,13 @@
-{% macro loadRecipes(recipes) %}
+{% macro loadRecipes(recipes, files) %}
     <div class="recipes">
         {% for recipe in recipes %}
             <div class="recipe">
                 <div class="logo-image">
-                    <img src="{{ recipe.path }}" alt="{{ recipe.title }}">
+                    {% for file in files %}
+                        {% if recipe.id == file.recipe_id %}
+                            <img src="{{ file.src }}" alt="{{ file.name }}">
+                        {% endif %}
+                    {% endfor %}
                 </div>
                 <div class="details">
                     <h4 class="title">{{ recipe.title }}</h4>
