--- a/Foodfy/src/app/views/model.njk
+++ b/Foodfy/src/app/views/model.njk
@@ -5,6 +5,9 @@
     {% block head %}
         <title>Receitas</title>
     {% endblock head %}
+
+    <link rel="shortcut icon" href="\images\layouts\assets\Fruits-Strawberries.ico" type="image/x-icon">
+
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
