--- a/Foodfy/src/app/views/users/chefs.njk
+++ b/Foodfy/src/app/views/users/chefs.njk
@@ -1,7 +1,11 @@
 {% extends 'layout.njk' %}
 
+{% block search %}
+
+{% endblock search %}
+
 {% block content %}
-    <main class="chefs" style="min-height: 80vh;">
+    <main class="chefs">
         {% for chef in chefs %}
             <div class="chef">
                 <div class="chef-avatar">
@@ -22,4 +26,13 @@
             </div>
         {% endfor %}
     </main>
+    <div class="pagination"
+        data-page = {{pagination.page}}
+        data-total = {{pagination.total}}
+        data-limit = {{pagination.limit}}
+    ></div>  
 {% endblock content %}
+
+{% block footer %}
+    
+{% endblock footer %}
