testing status code

--- a/02-3-page-of-courses-and-iframe/views/sobre.njk
+++ b/02-3-page-of-courses-and-iframe/views/sobre.njk
@@ -10,7 +10,7 @@
             <div class="header">
                 <a href="./favico.html" >Home</a>
                 <a href="https://discordapp.com/invite/gCRAFhc" target="_blank">Comunidade</a>
-                <a href="conteudo.html" >Conteúdo</a>
+                <a href="/course" >Conteúdo</a>
 
             </div>
         </header>
