--- a/Foodfy/src/app/views/parts/footer.njk
+++ b/Foodfy/src/app/views/parts/footer.njk
@@ -1,3 +1,3 @@
 <footer style="margin-top: auto">
-    Todos direitos reservados, receitas Foodfy.
+    Todos os direitos reservados, receitas Foodfy.
 </footer>
