--- a/Foodfy/src/app/views/layout.njk
+++ b/Foodfy/src/app/views/layout.njk
@@ -6,29 +6,14 @@
     {% block head %}
     <title>Foodfy</title>
     {% endblock %}
-    
     <link rel="shortcut icon" href="\images\layouts\assets\Buffet-Steak.ico" type="image/x-icon">
 
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    {% include 'parts/imports.njk' %}
 </head>
 
 <body style="display: flex; flex-direction: column; height: 100%;">
     <div class="wrapper">
-        <header>
-            <a href="/"><img src="/images\layouts\assets\logo.png" alt="logo_foodfy" /></a>
-            <div class="menus">
-                <div>
-                    <a id="about" href="/about" rel="options">Sobre</a>
-                    <a id="recipes" href="/recipes" rel="options">Receitas</a>
-                    <a id="chefs" href="/chefs" rel="options">Chefs</a>
-                </div>
-                {% block search %}
-                    {% include 'parts/search.njk' %}
-                {% endblock search %}
-            </div>
-        </header>
+        {% include 'parts/header.njk' %}
     {% block header %}
 
     {% endblock header %}
