--- a/Foodfy/public/styles/admin-page.css
+++ b/Foodfy/public/styles/admin-page.css
@@ -88,11 +88,26 @@ section#box {
     margin: 50px auto;
 }
 
+section#box > .wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    align-items: center;
+}
+
+section#box > .wrapper button.new-recipe,
+section#box > .wrapper button.new-chef {
+    padding: 9px 40px;
+}
+
 section#box h3 {
     line-height: 28px;
     font-size: 24px;
     color: #111111;
-    margin-bottom: 30px;
+}
+
+.wrapper > section#box > div.recipes {
+    margin-top: 10px;
 }
 
 div.recipes {
