--- a/Foodfy/public/styles/users.css
+++ b/Foodfy/public/styles/users.css
@@ -135,7 +135,8 @@ main.users {
     content: "\00a0\2714";
 }
   
-.fields .input input.error {
+.fields .input input.error,
+.fields .input input.red {
     background: #FFFFFF;
     border: 1px solid #FF3131;
 }
