--- a/Foodfy/src/app/views/admin/recipes/index.njk
+++ b/Foodfy/src/app/views/admin/recipes/index.njk
@@ -6,7 +6,13 @@
 
 {% block content %}
     <section id="box">
-        <h3>Gerenciar receitas</h3>
+        <div class="wrapper" style="display: flex; justify-content: space-between">
+            <h3>Gerenciar receitas</h3>
+            {% if session.userId %}
+                <a href="/admin/recipes/create"><button class="new-recipe">Nova</button></a>
+            {% endif %}
+        </div>
+
         {% from 'admin/recipes/loadRecipes.njk' import loadRecipes %}
         {{ loadRecipes(recipes, files) }}
         
