--- a/Foodfy/src/app/views/parts/header-admin.njk
+++ b/Foodfy/src/app/views/parts/header-admin.njk
@@ -11,8 +11,8 @@
     </div>
 </div>
 {% if session.userId %}
-<form action="/admin/users/logout" method="post">
-    <a href="#"><button class="link" href="/admin/users">Sair</button></a>
+<form action="/users/logout" method="post">
+    <a href="#"><button class="link" type="submit">Sair</button></a>
 </form>
 {% endif %}
 </div>
