--- a/Foodfy/src/app/views/session/model-session.njk
+++ b/Foodfy/src/app/views/session/model-session.njk
@@ -14,10 +14,10 @@
 <body>
     {% include "parts/messages.njk" %}
     
-    <div class="login-box container">
-    <div class="header-login">
+    <div class="session-box container">
+    <div class="header-session">
         <div class="logo">
-            <a href="/admin/"><img src="/images\layouts\assets\logo.png" alt="logo_foodfy" /></a>
+            <a href="/"><img src="/images\layouts\assets\logo.png" alt="logo_foodfy" /></a>
         </div>
 
         {% block header %}
