--- a/Foodfy/src/app/views/admin/chefs/index.njk
+++ b/Foodfy/src/app/views/admin/chefs/index.njk
@@ -9,7 +9,7 @@
     <div class="wrapper" style="display: flex; justify-content: space-between">
         <h5 style="width: 940px; font-size: 24px; color: #111111;">Gerenciar chefs</h5>
         {% if session.isAdmin %}
-            <a href="/admin/recipes/create"><button class="new-chef">Novo</button></a>
+            <a href="/admin/chefs/create"><button class="new-chef">Novo</button></a>
         {% endif %}
     </div>
 
