--- a/Foodfy/src/app/views/parts/header-admin.njk
+++ b/Foodfy/src/app/views/parts/header-admin.njk
@@ -4,9 +4,16 @@
         <a href="/admin/recipes"><img src="/images/layouts/assets/white-logo.png" alt="logo_foodfy"/></a>
     </div>
     <div class="links-header menus">
-        <a class="link" href="/admin/recipes">Receitas</a>
-        <a class="link" href="/admin/chefs">Chefs</a>
-        <a class="link" href="/admin/users">Usuários</a>
+        <ul>
+            <li>
+                <a class="link" href="/admin/recipes">Receitas</a>
+                <a class="link" href="/admin/recipes/dashboard">Minhas receitas</a>
+            </li>
+        
+            <a class="link" href="/admin/chefs">Chefs</a>
+    
+            <a class="link" href="/admin/users">Usuários</a>
+        </ul>
         
     </div>
 </div>
