--- a/Foodfy/public/styles/styles.css
+++ b/Foodfy/public/styles/styles.css
@@ -20,6 +20,10 @@ a {
     text-decoration: none;
 }
 
+button:hover {
+    filter: contrast(1.3);
+}
+
 .wrapper {
     width: 940px;
     margin: 0 auto;
