--- a/Foodfy/src/app/views/layout.njk
+++ b/Foodfy/src/app/views/layout.njk
@@ -12,6 +12,7 @@
 </head>
 
 <body style="display: flex; flex-direction: column; height: 100%;">
+    {% include "parts/messages.njk" %}
     <div class="wrapper">
         {% include 'parts/header.njk' %}
     {% block header %}
