--- a/Foodfy/src/app/views/admin/chefs/edit.njk
+++ b/Foodfy/src/app/views/admin/chefs/edit.njk
@@ -12,6 +12,7 @@
             <form action="/admin/chefs?_method=DELETE" method="post" class="delete-form">
                 <input type="hidden" name="id" value="{{chef.id}}">
                 <input type="hidden" name="file_id" value="{{chef.file_id}}">
+                <input type="hidden" name="name" value="{{chef.name}}">
                 <button id="button-delete" type="submit">Deletar</button>
             </form>
             
