--- a/Foodfy/src/app/views/admin/chefs/create.njk
+++ b/Foodfy/src/app/views/admin/chefs/create.njk
@@ -9,7 +9,7 @@
     <form action="/admin/chefs" method="POST" id="save_chef" enctype="multipart/form-data">
         <div class="chef-dashboard">
             <h4>Criando chef</h4>
-            <button type="submit">Salvar chef</button>
+            <button type="submit" onclick="Validate.allFields(event)">Salvar chef</button>
         </div>
 
         {% include 'admin/chefs/chefModel.njk' %}
