--- a/Foodfy/src/app/views/admin/isAdmin/register.njk
+++ b/Foodfy/src/app/views/admin/isAdmin/register.njk
@@ -8,7 +8,7 @@
     <div class="user-dashboard create">
         <h5>Criar Usuário</h5>
         <div class="options">    
-            <button type="submit" form="create-user">Salvar</button>
+            <button type="submit" onclick="Validate.allFields(event)" form="create-user">Salvar</button>
             <a href="/admin/users/"><button id="cancel">Cancelar</button></a>
         </div>
     </div>
