--- a/Foodfy/src/app/views/admin/recipes/create.njk
+++ b/Foodfy/src/app/views/admin/recipes/create.njk
@@ -9,13 +9,14 @@
     <form action="/admin/recipes" method="POST" id="save_recipe" enctype="multipart/form-data">
         <div class="recipe-dashboard">
             <h4>Criando receita</h4>
-            <button type="submit">Salvar receita</button>
+            <button type="submit" onclick="Validate.allFields(event)">Salvar receita</button>
         </div>
 
         {% include './recipeModel.njk' %}
     </form>
 </div>
 
+<script src="/save.js"></script>
 <script src="/addNewField.js"></script>
 
 {% endblock content %}
